# proj_for_tests

./: .coverage  pyproject.toml
src/: aapend_array.py
tests/: conftest.py  test_append_array.py  test_divide.py  test_list_types.py
tests/.pytest_cache/: .gitignore
tests/.pytest_cache/v/cache/: lastfailed  nodeids
