[tool.poetry]
name = "po"
version = "0.1.0"
description = ""
authors = ["Artem Moroz <deusestmaleficus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
